# LocalHero

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  mypy.ini
.github/workflows/: ci.yml
backend/: .env  openapi.json  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: database.py  main.py  models.py
backend/app/models/: users.py
backend/scripts/: export_openapi_schema.py  sync_openapi_types.py
backend/tests/: conftest.py  test_health.py
frontend/: README.md  jest.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/__tests__/: HealthPanel.test.tsx
frontend/app/: page.tsx
frontend/components/: HealthPanel.tsx
frontend/src/lib/: openapi-types.ts
frontend/tests/: health.spec.ts
